// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Polls /> toMatchSnapshot: Load <Polls /> as list of <PollItem /> 1`] = `
<div>
  <div
    className="polls"
  >
    <a
      className="poll__create_new"
      href="/new"
      onClick={[Function]}
    >
      <button
        className="sc-jKJlTe hiEsAV"
      >
         
        Create
      </button>
    </a>
    <h1>
      Questions
    </h1>
    <div
      className="polls_items"
    >
      <a
        className="poll__item"
        href="/questions/10"
        onClick={[Function]}
      >
        <div
          className="poll__item__area sc-hMqMXs iUcHQE"
        >
          <h4
            className="poll__item__title"
          >
            <strong>
              Game Genre
            </strong>
          </h4>
          <span
            className="sc-kEYyzF dRxZbp"
          >
            Published at 
            27.05.2015 11:22:26
          </span>
          <p>
            3
             choices
          </p>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Polls /> toMatchSnapshot: Loading 1`] = `
<div>
  <div
    className="polls"
  >
    <a
      className="poll__create_new"
      href="/new"
      onClick={[Function]}
    >
      <button
        className="sc-kpOJdX hUOHoI"
      >
         
        Create
      </button>
    </a>
    <h1>
      Questions
    </h1>
    <div
      className="polls__loader sc-ckVGcZ jDTthv"
      kind="primary"
      size={50}
    />
    <div
      className="polls_items"
    />
  </div>
</div>
`;
